--- a/FundaOfferFinder/OfferService/OfferService.csproj
+++ b/FundaOfferFinder/OfferService/OfferService.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
