--- a/FundaOfferFinder/OfferService.UnitTests/OfferService.UnitTests.csproj
+++ b/FundaOfferFinder/OfferService.UnitTests/OfferService.UnitTests.csproj
@@ -7,9 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.5.3" />
+    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="nunit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OfferService\OfferService.csproj" />
   </ItemGroup>
 
 </Project>
