1. Comments added 2. Some refactor 3. Exception added 3. Checking for exceed limits

--- a/FundaOfferFinder/OfferFinderConsole/Properties/launchSettings.json
+++ b/FundaOfferFinder/OfferFinderConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OfferFinderConsole": {
       "commandName": "Project",
-      "commandLineArgs": "Nieuwegein 10"
+      "commandLineArgs": "amsterdam 10"
     }
   }
 }
