Refactor and bug fix Bug: Program did not run without second parameter

--- a/FundaOfferFinder/OfferFinderConsole/Properties/launchSettings.json
+++ b/FundaOfferFinder/OfferFinderConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OfferFinderConsole": {
       "commandName": "Project",
-      "commandLineArgs": "amsterdam 10"
+      "commandLineArgs": "amsterdam,tuin 10"
     }
   }
 }
